# diffscope-vsti

./: .gitignore  .gitmodules  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  README.md
libraries/: CMakeLists.txt
libraries/loadso/: .gitignore  CMakeLists.txt  README.md
libraries/loadso/include/loadso/: library.h  loadso_global.h  system.h
libraries/loadso/src/: library.cpp  system.cpp
libraries/loadso/tests/: CMakeLists.txt
libraries/loadso/tests/dll/: CMakeLists.txt  dll.cpp  dll.h
libraries/loadso/tests/exe/: CMakeLists.txt  main.cpp
resource/: myplugineditor.uidesc  myplugineditor.uidesc.old
scripts/: functions.cmake
source/: Api.cpp  Api.h  EditorHelper.cpp  EditorHelper.h  ErrorDisplay.cpp  ErrorDisplay.h  MyButtonController.cpp  MyButtonController.h  MyPluginEditor.cpp  MyPluginEditor.h  MyTextController.cpp  MyTextController.h  ParameterTypes.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  api.h  bridge.cpp  bridge.h  libraryloader.cpp  libraryloader.h  myeditor.cpp  myeditor.h  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
